<resources>
    <string name="app_name">Utility</string>
    <string name="action_settings">Settings</string>
    <string name="time">TIME:</string>
    <string name="date_and_time">Date and Time</string>
    <string name="enter_amount">Enter amount</string>
    <string name="convert">CONVERT</string>
    <string name="title_activity_setting">Setting</string>
    <string name="messages_header">Message header</string>
    <string name="signature_title">Signature tile</string>
    <string name="reply_title">Reply title</string>
    <string name="sync_header">Sync header</string>
    <string name="sync_title">Sync title</string>
    <string name="attachment_summary_off">Attachment summary off</string>
    <string name="attachment_summary_on">Attachment summary on</string>
    <string name="attachment_title">Attachment title</string>
    <string name="aud">AUD</string>
    <string name="back">Back</string>
    <string name="convert_from">Convert from</string>
    <string name="weather">weather</string>
    <string name="select_city">Select City</string>
    <string-array name="FromCurrencies">
<!--        <item>Convert From</item>-->
        <item>AUD</item>
        <item>INR</item>
        <item>USD</item>
        <item>EUR</item>

    </string-array>
    <string-array name="Cities">
<!--        <item>Select Cities</item>-->
        <item>Brisbane</item>
        <item>Sydney</item>
        <item>Melbourne</item>
        <item>Adelaide</item>
        <item>Mumbai</item>
        <item>New Delhi</item>
        <item>Gold Coast</item>
        <item>Florida</item>

    </string-array>
</resources>
