<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <ImageButton
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:backgroundTint="#00131212"
            android:scaleType="fitXY"
            android:src="@drawable/pic1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/weather" />

        <TextView
            android:id="@+id/weatherView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="98dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/lato_italic"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timeLabelView"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/lato_italic"
            android:gravity="center_horizontal"
            android:text="@string/time"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timeView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/lato_italic"
            android:text="@string/date_and_time"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/timeLabelView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/currencyView"
            android:layout_width="65dp"
            android:layout_height="55dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/lato_italic"
            android:gravity="center_horizontal"
            android:paddingTop="10sp"
            android:text="@string/aud"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeLabelView"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fromAmountText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:fontFamily="@font/lato_italic"
            android:hint="@string/enter_amount"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.66"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeView" />

        <Button
            android:id="@+id/convertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#EDEEEE"
            android:fontFamily="@font/lato_italic"
            android:onClick="convertClicked"
            android:text="@string/convert"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fromAmountText" />

        <TextView
            android:id="@+id/toAmountView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:fontFamily="@font/lato_italic"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/convertButton" />

        <TextView
            android:id="@+id/toAmountView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:fontFamily="@font/lato_italic"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/convertButton" />

        <TextView
            android:id="@+id/toAmountView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:fontFamily="@font/lato_italic"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/convertButton" />
        <TextView
            android:id="@+id/toAmountView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="196dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:fontFamily="@font/lato_italic"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/convertButton" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>